# vox-cc

./: .claudeignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  DISTRIBUTION.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  stt-capsule-loaders.html  waveform-loader-capsules.html
global-claude-config/agents/: architect.md  build-error-resolver.md  code-reviewer.md  doc-updater.md  e2e-runner.md  planner.md  refactor-cleaner.md  security-reviewer.md  tdd-guide.md
global-claude-config/rules/: agents.md  coding-style.md  git-workflow.md  hooks.md  patterns.md  performance.md  security.md  testing.md
sidecar/: CLAUDE.md  gate3_ws_test.py  main.py  requirements.txt  sidecar.spec  test_mic.py
sidecar/audio/: capture.py  pipeline.py  vad.py
sidecar/models/: dual_loader.py  llm_engine.py  prompt_router.py
sidecar/prompts/: chat_messaging.txt  code_editor.txt  document_editor.txt  email_client.txt  neutral_fallback.txt  neutral_fallback_casual.txt  neutral_fallback_code.txt  neutral_fallback_concise.txt  neutral_fallback_professional.txt  neutral_fallback_technical.txt  terminal_interface.txt
sidecar/routers/: dictation.py  finetuning.py  health.py  replay.py  snippets.py  text_processing.py  (+1 more)
src/: App.tsx  CLAUDE.md  FineTuningDashboard.tsx  Settings.tsx  StreamingOverlay.tsx  main.tsx
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: context.rs  hotkey.rs  inject.rs  mod.rs  windows.rs
src-tauri/src/sidecar/: events.rs  manager.rs
(+5 files in other folders)
